--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "eva-rt-common"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
-license-file = "LICENSE"
+license = "GPL-3.0"
 description = "Structs, traits and functions used to develop real-time analysis tools."
 homepage = "https://github.com/Yurand2000/eva-rt-common"
 repository = "https://github.com/Yurand2000/eva-rt-common"
